5/5.05/app-2-db/ignore-ingress-2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-2-db-ing
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-2-db-svc
            port:
              number: 80
      - path: /pingpong
        pathType: Prefix
        backend:
          service:
            name: app-2-db-svc
            port:
              number: 80
      - path: /healthz
        pathType: Prefix
        backend:
          service:
            name: app-0-db-svc
            port:
              number: 80
